--- a/src/component/home/App.css
+++ b/src/component/home/App.css
@@ -25,7 +25,7 @@
   line-height: 2.333333333333333;
   color: #fff;
   text-align: center;
-  right: 5%;
+  right: 12%;
   margin-top: -1px;
   border-radius: 8px 8px 8px 8px;
 }
@@ -57,7 +57,7 @@
   line-height: 2.333333333333333;
   color: #fff;
   text-align: center;
-  right: -8px;
+  right: 20%;
   margin-top: 5px;
   border-radius: 8px 8px 8px 8px;
 }
@@ -89,4 +89,15 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
+}
+
+.title-1::before {
+  content: "";
+  position: absolute;
+  display: block;
+  left: 0;
+  top: 8px;
+  bottom: 8px;
+  width: 4px;
+  background: #a09880;
 }
