--- a/src/component/home/App.css
+++ b/src/component/home/App.css
@@ -101,3 +101,9 @@
   width: 4px;
   background: #a09880;
 }
+
+.footer {
+  background-image: url(/public/images/banner-footer.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
